--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,9 +70,9 @@ environment:
   OPENSSL64:    C:\OpenSSL-Win64
 
   matrix:
-    - builder: msbuild
-      vsver: 140
-      linkmode: shared
+#    - builder: msbuild
+#      vsver: 140
+#      linkmode: shared
 
     - builder: cmake
       vsver: 150
@@ -431,9 +431,9 @@ build_script:
         {
             $generator = '"Visual Studio 15 2017"'
         }
-        $defs = "--config RelWithDebInfo"
+        $defs = "--config Debug"
         $defs+=" -G" + $generator;
-        $defs+=" -DCMAKE_BUILD_TYPE=RelWithDebInfo";
+        $defs+=" -DCMAKE_BUILD_TYPE=Debug";
         $defs+=" -DPOCO_ENABLE_PDF=OFF";
         $defs+=" -DPOCO_ENABLE_NETSSL=ON";
         $defs+=" -DPOCO_ENABLE_NETSSL_WIN=ON";
