--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,8 @@ matrix:
         - echo -e "\nd56f5187479451eabf01fb78af6dfcb131a6481e" >> /usr/local/android-sdk/licenses/android-sdk-license
         # Install NDK and cmake via android sdkmanager.
         - /usr/local/android-sdk/tools/bin/sdkmanager --update > /dev/null
-        - /usr/local/android-sdk/tools/bin/sdkmanager "emulator" "ndk-bundle" "cmake;3.6.4111459" > /dev/null     
+        - /usr/local/android-sdk/tools/bin/sdkmanager "emulator" "ndk-bundle" "cmake;3.6.4111459" > /dev/null
+        - /usr/local/android-sdk/tools/bin/sdkmanager --list
       before_script:
         - export TERM=dumb
         - export _NO_CHECK_SIGNATURE=true
@@ -112,7 +113,8 @@ matrix:
         - echo -e "\nd56f5187479451eabf01fb78af6dfcb131a6481e" >> /usr/local/android-sdk/licenses/android-sdk-license
         # Install NDK and cmake via android sdkmanager.
         - /usr/local/android-sdk/tools/bin/sdkmanager --update > /dev/null
-        - /usr/local/android-sdk/tools/bin/sdkmanager "emulator" "ndk-bundle" "cmake;3.6.4111459" > /dev/null     
+        - /usr/local/android-sdk/tools/bin/sdkmanager "emulator" "ndk-bundle" "cmake;3.6.4111459" > /dev/null
+        - /usr/local/android-sdk/tools/bin/sdkmanager --list
       before_script:
         - export TERM=dumb
         - export _NO_CHECK_SIGNATURE=true
