hunter_add_package should be off if third party is not required

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,11 +74,13 @@ message(STATUS "Setting Poco build type - ${CMAKE_BUILD_TYPE}")
 # Include some common macros to simpilfy the Poco CMake files
 include(PocoMacros)
 
-hunter_add_package(OpenSSL)
 if(ENABLE_CRYPTO OR ENABLE_NETSSL)
+	hunter_add_package(OpenSSL)
 	find_package(OpenSSL REQUIRED)
 else()
-	find_package(OpenSSL)
+	if(NOT HUNTER_ENABLED)
+		find_package(OpenSSL)
+	endif()
 endif()
 
 if(OPENSSL_FOUND)
@@ -108,11 +110,13 @@ else()
     option(ENABLE_APACHECONNECTOR "Enable ApacheConnector" OFF)
 endif()
 
-hunter_add_package(MySQL-client)
 if(ENABLE_DATA_MYSQL)
+  hunter_add_package(MySQL-client)
   find_package(MySQL REQUIRED)
 else()
-  find_package(MySQL)
+  if(NOT HUNTER_ENABLED)
+	find_package(MySQL)
+  endif()
 endif()
 
 if(MYSQL_FOUND)
@@ -123,11 +127,13 @@ else()
   option(ENABLE_DATA_MYSQL "Enable Data MySQL" OFF)
 endif()
 
-hunter_add_package(PostgreSQL)
 if(ENABLE_DATA_POSTGRESQL)
+    hunter_add_package(PostgreSQL)
     find_package(PostgreSQL REQUIRED)
 else()
-    find_package(PostgreSQL QUIET)
+    if(NOT HUNTER_ENABLED)
+		find_package(PostgreSQL QUIET)
+	endif()
 endif()
  
 if(POSTGRESQL_FOUND)
