--- a/.travis.yml
+++ b/.travis.yml
@@ -246,6 +246,7 @@ matrix:
         - export POCO_BASE=`pwd`
         - type cmake
         - type ctest
+        - pwd
         - cmake -H. -Bcmake-build --config Debug -DCMAKE_BUILD_TYPE=Debug -DPOCO_ENABLE_PDF=OFF -DPOCO_ENABLE_TESTS=ON -DPOCO_ENABLE_SAMPLES=ON && cmake --build cmake-build -- -j2 && sudo /usr/local/cmake-3.9.2/bin/ctest -VV
 
 
